refactored code and added removal of forum viewed per user.
- fixed issues of viewed forums getting shuffle before sending it to the frontend which was causing it to be shown in a random order rather then by visited date.